@@ -89,32 +89,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx-maven-plugin-version}</version>
                 <configuration>
                     <mainClass>${mainClassName}</mainClass>
-                    <options>
-                        <option>--add-opens=javafx.graphics/com.sun.javafx=ALL-UNNAMED</option>
-                        <option>--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-                    </options>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>${mainClassName}</mainClass>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>debug</id>
-                        <configuration>
-                            <mainClass>${mainClassName}</mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
